skeleton overflow issue fix

--- a/src/_mixins.scss
+++ b/src/_mixins.scss
@@ -1,6 +1,6 @@
 @mixin section-width {
   width: 90%;
-  max-width: 1100px;
+  max-width: 1200px;
   margin: 0 auto;
 }
 @mixin buttonBackground {
