--- a/src/components/header.module.scss
+++ b/src/components/header.module.scss
@@ -11,7 +11,27 @@
     align-items: center;
     justify-content: space-between;
     position: relative;
+    .navLinks{
+        display: flex;
+        gap: 20px;
+        // border: 1px solid black;
+        padding: 10px;
+        a{
+            font-size: 14px;
+            // padding-right: 15px;
+            transition: all ease .2s;
+            font-weight: 600;
+            &:hover{
+                cursor: pointer;
+                font-weight: 600;
+                color: #0062ff;
+            }
+            &:focus{
+                color: #0062ff;
 
+            }
+        }
+    }
     .logo{
         h1{
             font-size: 30px;
