--- a/src/components/home/Skeleton.module.scss
+++ b/src/components/home/Skeleton.module.scss
@@ -2,10 +2,11 @@
   max-width: 480px;
   min-height: 250px;
   width: 100%;
-  padding: 20px;
+  padding: 15px;
   border-radius: 8px;
   background: #fff;
   box-shadow: rgba(0, 0, 0, 0.048) 0px 5px 15px 0px;
+  overflow: hidden;
 }
 .skeleton {
     position: relative;
